# discuzReader

./: App.jsx  README.md  app.json  index.js  metro.config.js  package-lock.json  package.json  settings.json  tsconfig.json
.claude/: settings.local.json
.clinerules/: project_rules.md
.github/workflows/: build-apk.yml
.trae/rules/: project_rules.md
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  lexbor_jni.cpp
ios/: Podfile
ios/discuzReader/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/discuzReader.xcodeproj/: project.pbxproj
ios/discuzReader.xcodeproj/xcshareddata/xcschemes/: discuzReader.xcscheme
src/: router.js
src/components/: ActionSheet.jsx  Pagination.jsx  ReplyModal.jsx  SortableModal.jsx  TabBar.jsx
src/components/Loading/: component.jsx  index.jsx
src/lib/lexbor/: lexbor-android.js  lexbor-native.js  lexbor-window.js  lexbor.js  tag-names.js
src/lib/lexbor/debug/: 2026-05-18-hang-has-pseudo.md  2026-05-19-android-performance-optimization.md  2026-05-19-android-querySelectorAll-wrong-handles.md  2026-05-19-scoped-find-direct-child.md
src/lib/temme/: grammar.js  temme.ts  types.d.ts
src/utils/: api.js  htmlToNodes.js  http.js  httpExample.js  index.js  selectors.js
src/views/: Forum.jsx  Home.jsx  Hosts.jsx  Login.jsx  Message.jsx  MessageDetail.jsx  Nodes.jsx  Post.jsx  Post.jsx.bak  PostItemV2.jsx  PostWebView.jsx  Profile.jsx  Search.jsx  Thread.jsx  ThreadWebView.jsx.bak  bak.ThreadWebView.jsx
(+5 files in other folders)
